--- a/pytest.ini
+++ b/pytest.ini
@@ -3,7 +3,12 @@ testpaths = src tests doc/notebooks
 pythonpath = src
 python_files = test_*.py *_test.py scenario_*.py
 norecursedirs = *.egg-info .git .cache .ipynb_checkpoints htmlcov
-addopts = --doctest-modules --durations=20  --cov-config pytest.ini
+addopts = 
+       --doctest-modules --durations=20
+       --cov-config pytest.ini
+       --ignore=src/lbmpy/custom_code_nodes.py
+       --ignore=src/lbmpy/lookup_tables.py
+       --ignore=src/lbmpy/phasefield_allen_cahn/contact_angle.py
 markers =
        longrun: tests only run at night since they have large execution time
        notebook: mark for notebooks
@@ -24,7 +29,10 @@ omit = doc/*
        setup.py
        conftest.py
        versioneer.py
+       quicktest.py
+       noxfile.py
        src/lbmpy/_version.py
+       src/lbmpy/_compat.py
        venv/
 
 [report]
